Update author E-Mail-address

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "color-rgb",
   "description": "color-rgb",
   "version": "0.1.3",
-  "author": "Malte-Maurice Dreyer <dreyer.maltem@gmail.com>",
+  "author": "Malte-Maurice Dreyer <dreyer.maltem+dev@gmail.com>",
   "bugs": {
     "url": "https://github.com/ileri/color-rgb/issues"
   },
